# sam-panda-grasp-system

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  VLM.md
.github/workflows/: validate.yml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  PORTABILITY_AUDIT.md  QUICKSTART.md  THIRD_PARTY.md  fig5_3_semantic_rerank.drawio  semantic_vlm_flow.md
environment/: README.md  anygrasp_env.reference.yml
graspnet-baseline/graspnetAPI/graspnetAPI.egg-info/: PKG-INFO  requires.txt
graspnet-baseline/knn/knn_pytorch.egg-info/: SOURCES.txt
learn/: inspect_lerobot_shapes.py  test.py  tools.py
learn/core/core/: camera.py  lidar.py  motor.py
requirements/: anygrasp-reference.txt
scripts/: check_export_env.sh  download_models.sh  source_project_env.sh
src/grasp_detector_ros/: CMakeLists.txt  package.xml
src/grasp_detector_ros/scripts/: crop_test.py  detector_node.py  detector_node_open3d.py  grasp_inference_node copy.py  grasp_inference_node.py
src/panda_moveit_config/config/: panda.srdf.xacro  panda_last.urdf  sensors_kinect_pointcloud.yaml
src/panda_moveit_config/launch/: demo_gazebo.launch  demo_gazebo_system.launch  moveit.rviz  panda.launch  panda_supermarket_new.launch  planning_context.launch  sensor_manager.launch.xml
src/panda_pick_place/: CMakeLists.txt  package.xml
src/panda_pick_place/config/: test.rviz
src/panda_pick_place/launch/: demo_gazebo_supermarket.launch  panda_supermarket.launch  pick_place_demo.launch  run.launch  supermarket_sim copy.launch  supermarket_sim.launch  test_attacher.launch  view_robot.launch
src/panda_pick_place/models/: cube.sdf  cylinder.sdf
src/panda_pick_place/models/grasp_basket/: model.config  model.sdf
src/panda_pick_place/models/link_attacher_helper/: model.config  model.sdf
src/panda_pick_place/scripts/: control_panel.py  demo.py  demo_copy.py  gtsp_scheduler.py  motion_controller.py  moveit_learn.py  new.py
src/panda_pick_place/scripts copy_latest/: demo.py  fangx_test.py  gazebo_interface.py  grasp_test.py  mocali.py  motion_controller.py  moveit_grasp_client.py  pick_place_node.py  test.py
src/panda_pick_place/urdf/: panda_with_camera.urdf.xacro  simple_robot.urdf
src/panda_pick_place/worlds/: easy_world.world  new.world  supermarket copy.world  supermarket.world  supermarket_new.world
src/panda_pick_place/worlds/004_sugar_box/: sugar_box.sdf
src/panda_pick_place/worlds/005_tomato_soup_can/: tomato_soup_can.sdf
src/panda_pick_place/worlds/007_tuna_fish_can/: tuna_fish_can.sdf
src/panda_pick_place/worlds/025_mug/: mug.sdf
src/panda_pick_place/worlds/Beer/: model-1_4.sdf  model.sdf
src/panda_pick_place/worlds/beer/: model.sdf
src/sam_perception/: CMakeLists.txt  package.xml  setup.py
src/sam_perception/launch/: demo_only.launch  experiment_logger.launch  integrated_system.launch  llm.launch  model_check.launch  pointcloud_debug.launch  run_graspnet.launch  sam_py.launch  sam_sim.launch  semantic_vlm_stack.launch  semantic_vlm_stack_no_sam.launch  semantic_vlm_stack_random.launch  stability_profile.launch  system_new.launch
src/sam_perception/models/: README.md
(+22 files in other folders)
