<?xml version="1.0"?>
<package format="2">
  <name>panda_pick_place</name>
  <version>0.0.0</version>
  <description>The panda_pick_place package for Franka Panda pick and place demo</description>
  
  <maintainer email="lhj@todo.todo">lhj</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 添加所有必要的依赖 -->
  <depend>rospy</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>panda_moveit_config</depend>
  <depend>tf</depend>
  
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/worlds"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
